# autoexperimet

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: overview.md  phase-0-baseline.md  phase-1-model-baseline.md  phase-2-execution-protocol.md  phase-3-scheduling-baseline.md  phase-4-acceptance-baseline.md  phase-5-migration-baseline.md  phase-6-runtime-loop.md
scripts/: check.sh
src/agent_runtime/: __init__.py
src/agent_runtime/acceptance/: __init__.py  adoption.py  gates.py  result_types.py  validators.py
src/agent_runtime/common/: __init__.py
src/agent_runtime/execution/: __init__.py  late_arrival.py  mirrors.py  protocol.py  validators.py
src/agent_runtime/migration/: __init__.py  core.py  models.py
src/agent_runtime/models/: __init__.py  adoption.py  common.py  execution.py  inventory.py  runtime.py  skeleton.py
src/agent_runtime/runtime/: __init__.py  helpers.py  loop.py  orchestration.py  results.py  state.py
src/agent_runtime/scheduling/: __init__.py  action_resolution.py  guide_resolution.py  helpers.py  module_selection.py  phase_selection.py  result_types.py  scheduler.py
tests/: test_models.py  test_smoke.py
tests/acceptance/: test_phase4_acceptance.py
tests/execution/: test_action_record_protocol.py  test_finalized_immutability.py  test_retry_count.py  test_waiting_resume.py
tests/migration/: test_phase5_migration.py
tests/runtime/: test_phase6_runtime.py
tests/scheduling/: test_phase3_scheduler.py
