[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Phase 1 model baseline for an experiment-oriented agent runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
