[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Skeleton-first experiment agent runtime with Phase 1-6 model, execution, scheduling, acceptance, migration, and runtime-loop baselines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
